ch7-gatekeeper-k8s/examples/external-data-provider/test/1-c.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAnswerVerification
metadata:
  name: pod-answers
  labels:
    policy.jimmyray.io/gatekeeper: constraint
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "policy-test"
