ch7-gatekeeper-k8s/examples/external-data-provider/test/ed-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sExternalDataValidation
metadata:
  name: deny-images-with-invalid-suffix
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "policy-test"
